@@ -1,4 +1,4 @@
-/* $OpenBSD: compress.c,v 1.25 2006/08/06 01:13:32 stevesk Exp $ */
+/* $OpenBSD: compress.c,v 1.26 2010/09/08 04:13:31 deraadt Exp $ */
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -17,11 +17,12 @@
 #include <sys/types.h>
 
 #include <stdarg.h>
-#include <zlib.h>
 
 #include "log.h"
 #include "buffer.h"
 #include "compress.h"
+
+#include <zlib.h>
 
 z_stream incoming_stream;
 z_stream outgoing_stream;
